Changed ExpandableProtractorNode to use Not instead of SettableNot, see #3045
Switched to use common code version of buffering, see #2786
# 1.00.01 (52896) Jun 9, 2011
5/14/11 Moved toolbox-related classes to toolbox package from Bending Light for reuse in Sugar and Salt Solutions
Generalized toolbox node and related classes for reuse with other canvas types
# 1.00.00 (51700) May 9, 2011
# 0.00.52 (51674) May 8, 2011
Fixed: can't put objects back in the toolbox. That is, when dragged back to the toolbox, the prisms sit on the toolbox but don't disappear.
# 0.00.51 (51671) May 8, 2011
Fixed: If you drag out more than 1 object in Prism Break, reset all does not remove the first object.
# 0.00.50 (51536) May 4, 2011
Show the rotation drag handle behind the prism shape so it looks like it attaches solidly instead of sticking out on top
# 0.00.49 (51534) May 4, 2011
Attached knob to the prism corner for rotation
Fixed: exception in prism break when resetting after creating and returning a prism
Fixed: when going from mystery to custom, the slider should reappear
Reordered tabs so that prisms comes before more tools
renamed "n=?" to "What is n?"
# 0.00.48 (51214) Apr 26, 2011
Converted curved objects to use analytical expressions instead of polygonal approximations, resolves #2832
Remove the associated prism from the model when dropped back in the toolbox, resolves #2833
Handled review issues
# 0.00.47 (51069) Apr 22, 2011
Fixed: laser can be rotated out of the play area
Fixed: laser can be dragged out of the play area
Fixed: prisms can be dragged out of the play area
Fixed: intensity sensor can be dragged out of the play area
Fixed: protractor can be dragged out of the play area
Fixed: tools cannot be dragged out of the play area when dragging out of the toolbox
refactored base class Box for use in VBox and HBox, created HBox class
Fixed: when dragging tools out of the toolbox they can be dragged out of the visible region